# jn

./: .coveragerc  .gitignore  .importlinter  .jncheck.toml  AGENTS.md  BUG-HUNT-REPORT.md  CHECKER_SUMMARY.md  CLAUDE.md  CODEBASE_REVIEW.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_INDEX.md  CODE_REVIEW.md  COVERAGE_REVIEW.md  DEMO-REVIEW-NOTES.md  DESIGN-jn-index.md  Dockerfile  Dockerfile.release  INSTALL.md  Makefile  PLUGIN_ARCHITECTURE_RECOMMENDATION.md  QUALITY_ANALYSIS_SUMMARY.txt  README.md  REFACTORING_EXAMPLES.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REVIEW.md  REVIEW_2025_11_07.md  ROADMAP_AUDIT.md  filtered.yaml  flake.nix  full_review.md  importlinter.ini  install.sh  mcp-servers.example.json  pyproject.toml  sitecustomize.py  test.csv  test.duckdb  test.json  test.yaml  (+3 more)
.claude/: agents.md  settings.json
.github/workflows/: ci.yml  container.yml  on-release-main.yml  release.yml
archive/tools/: jn-test-plugin
benchmarks/: zq_bench.zig
benchmarks/data/: test_10k.ndjson
demo/: coverage.sh
demos/: .gitignore  README.md  good-demo-bad-demo-guidelines.md  run_all.sh  todo-demo.sh
demos/adapter-merge/: .gitignore  README.md  expected.txt  run.sh  run_examples.sh  sales.csv  setup_data.py
demos/code-lcov/: expected.txt  output.txt  run.sh  run_demo.sh
demos/coverage-analysis/: README.md  coverage.json  run_examples.sh
demos/csv-filtering/: README.md  expected.txt  run.sh  run_examples.sh  sales_data.csv
demos/db/: .gitignore  expected.txt  run.sh
demos/dead-code-analysis/: demo.sh
demos/folder-profiles/: expected.txt  run.sh  run_examples.sh
demos/genomoncology/: README.md  example.sh  expected.txt  run.sh
demos/glob/: expected.txt  run.sh  run_examples.sh
demos/http-api/: README.md  expected.txt  input.json  run.sh  run_examples.sh
demos/jn-grep/: .gitignore  expected.txt  run.sh  run_examples.sh
demos/join/: README.md  customers.csv  expected.txt  orders.csv  run.sh  run_examples.sh
demos/json-editing/: expected.txt  run.sh  run_examples.sh  sample.json  users.ndjson
demos/lcov-analysis/: README.md  coverage.lcov  run_examples.sh
demos/markdown-skills/: expected.txt  run.sh  run_examples.sh  sample.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLUGIN_CALL_RCA.md  TESTING_NO_MOCKS.md  TESTING_STRATEGY.md  XLSX_MULTI_TRANSPORT.md  genomoncology-integration.md  inspect.md  mcp-plugin.md  mcp-profiles.md  onboarding.md
examples/: DEPRECATED-COVERAGE-JSON-PROFILES.md  FUNCTION-COVERAGE-ANALYSIS.md  LCOV-FORMAT-ANALYSIS.md  XML-PLUGIN-GUIDE.md  books-simple.xml  company-nested.xml  products.json
experiments/: README.md
jn/: __init__.py  zig_builder.py
jn_home/: __init__.py
plugins/: README.md
scripts/: bootstrap-release.sh  coverage.sh
spec/: 00-plan.md  02-architecture.md  03-users-guide.md  04-project-layout.md  05-plugin-system.md  09-joining-operations.md  10-python-plugins.md  11-demo-migration.md  12-testing-strategy.md  13-code-quality.md  14-zq-functions.md  15-path-isolation-fix.md  16-excel-parsing.md  99-ideas.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROFILES.md  README.md  ROADMAP.md  Zig.md  coverage_analysis.md  db.md  indexes  inspect-design.md  log.md  opendal-analysis.md  qa_plan.md  roadmap.md  shell-commands.md  zig-libraries-evaluation.md  zq-decomposition-plan.md  zq-functions-inventory.txt
sprints/: 01-foundation-csv-plugin.md
templates/: filter_basic.py  source_basic.py  target_basic.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_address_parser.py  test_addressability_integration.py  test_cli.py  test_cli_new.py  test_discovery.py  test_filter.py  test_gmail_plugin.py  test_plugins.py  test_shell_plugins.py
zq/: benchmark.sh  build.zig  test_accuracy.sh
(+746 files in other folders)
