# JN - Universal Data Pipeline Tool
#
# This file exists only to configure pytest for running Python-based tests.
# JN itself is a Zig project - see Makefile for build instructions.

[project]
name = "jn-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
